5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1644_2704.log
== TEST (2019-04-11 16:31:28) 
-- CODE:
media= float(input("nota do aluno"))
med = input("recebera bonificaçao ? (S/N) ")
if( med.upper() == "S"):  
	total = media + nota*10/100
else:
	total = media
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = media + nota*10/100
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:31:38) 
-- CODE:
media= float(input("nota do aluno"))
med = input("recebera bonificaçao ? (S/N) ")
if( med.upper() == "S"):  
	total = media + nota*10/100
else:
	total = media
print(round(total, 2))

-- EXECUTION TIME:
0.26073
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2704/main.py", line 4, in <module>
    total = media + nota*10/100
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:32:28) 
-- CODE:
media= float(input("nota do aluno"))
med = input("recebera bonificaçao ? (S/N) ")
if( med.upper() == "S"):  
	total = media + nota*10/100
else:
	total = media
print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = media + nota*10/100
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:32:45) 
-- CODE:
media= float(input("nota do aluno"))
med = input("recebera bonificaçao ? (S/N) ")
if( med.upper() == "S"):  
	total = media + nota*10/100
else:
	total = media
print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = media + nota*10/100
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:33:07) 
-- CODE:
media= float(input("nota do aluno"))
med = input("recebera bonificacao ? (S/N) ")
if( med.upper() == "S"):  
	total = media + nota*10/100
else:
	total = media
print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = media + nota*10/100
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:33:35) 
-- CODE:
media= float(input("nota do aluno"))
med = input("recebera bonificacao ? (S/N) ")
if( med.upper() == "S"):  
	total = media + media*10/100
else:
	total = media
print(round(total,2))

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:33:46) 
-- CODE:
media= float(input("nota do aluno"))
med = input("recebera bonificacao ? (S/N) ")
if( med.upper() == "S"):  
	total = media + media*10/100
else:
	total = media
print(round(total,2))

-- EXECUTION TIME:
0.142586
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
